--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="티스토리 블로그들의 랜덤 글을 모아서 보여주는 페이지입니다. 다양한 블로그 포스트를 매번 새롭게 만나보세요.">
+    <meta property="og:title" content="티스토리 랜덤 글 모음">
+    <meta property="og:description" content="티스토리 블로그들의 랜덤 글을 모아서 보여주는 사이트입니다.">
+    <meta property="og:image" content="https://tistory-sable.vercel.app/log.png">
+    <meta property="og:url" content="https://tistory-sable.vercel.app/">
+    <meta name="google-site-verification" content="kN1FRqW8qrmop8YBPV_rygVSHe8_f9ubRvkeppvQUoE" />
     <title>블로그 랜덤 글 모음</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <style>
