--- a/index.html
+++ b/index.html
@@ -267,6 +267,11 @@
                 url: "https://picturemaker.tistory.com/rss",
                 count: 25,
                 color: "#E8F5E9"  // 연한 초록색
+            },
+            {
+                url: "https://uuisi.tistory.com/rss",
+                count: 25,
+                color: "#FFF3E0"  // 연한 주황색
             }
         ];
 
